--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@
 
 .icons{
     position: absolute;
-    bottom: 25px;
-    right: 240px;
+    bottom: 40px;
+    right: 200px;
 }
 .second{
     background-color: rgba(198, 198, 198, 0.098);
@@ -313,10 +313,10 @@
     }
     
     .icons{
-        top: 180px;
-        right: 240px;
+        top: 185px;
+        right: 230px;
     }
-    .icons h5, .icons p{
+    .icons h5, .icons span{
         font-size: xx-small !important;
     }
 }
