--- a/style.css
+++ b/style.css
@@ -250,15 +250,151 @@
 .footer hr{
     color: white;
 }
-.copyright{
-    position: relative;
-}
-.powered{
-    position: absolute;
-    left: 1050px;
-}
 
-
+@media (max-width: 300px){
+    .logo{
+        width: 80px;
+    }
+    .bg-image{
+        height: 240px;
+    }
+    .top-right {
+        top: 70px;
+        right: 30px;
+        font-size: 8pt !important;
+    }
+    
+    .right {
+        top: 95px;
+        right: 90px;
+        font-size: 12pt;
+    }
+    
+    .bottom-right {
+        top: 150px;
+        right: 15px;
+        font-size: xx-small;
+    }
+    .bottom {
+        top: 180px;
+        right: 215px;
+    }
+    .phone{
+        font-size: 10px;
+        padding: 5px;
+    }
+    .numbers{
+        text-align: center !important;
+    }
+    .numbers .happy{
+        padding-top: 100px !important;
+    }
+    
+    .icons{
+        top: 182px;
+        right: 60px;
+    }
+    .icons h5{
+        font-size: xx-small !important;
+    }
+    .icons span{
+        font-size: small !important;
+    }
+}
+@media (min-width: 300px) and (max-width: 400px){
+    .logo{
+        width: 120px;
+    }
+    .bg-image{
+        height: 250px;
+    }
+    .top-right {
+        top: 70px;
+        right: 100px;
+        font-size: 8pt !important;
+    }
+    
+    .right {
+        top: 95px;
+        right: 160px;
+        font-size: 12pt;
+    }
+    
+    .bottom-right {
+        top: 150px;
+        right: 85px;
+        font-size: xx-small;
+    }
+    .bottom {
+        top: 180px;
+        right: 280px;
+    }
+    .phone{
+        font-size: 10px;
+        padding: 5px;
+    }
+    .numbers .happy{
+        padding-top: 100px !important;
+    }
+    
+    .icons{
+        top: 182px;
+        right: 130px;
+    }
+    .icons h5{
+        font-size: xx-small !important;
+    }
+    .icons span{
+        font-size: small !important;
+    }
+}
+@media (min-width: 400px) and (max-width: 550px){
+    .logo{
+        width: 120px;
+    }
+    .bg-image{
+        height: 250px;
+    }
+    .top-right {
+        top: 70px;
+        right: 160px;
+        font-size: 8pt !important;
+    }
+    
+    .right {
+        top: 95px;
+        right: 220px;
+        font-size: 12pt;
+    }
+    
+    .bottom-right {
+        top: 150px;
+        right: 140px;
+        font-size: xx-small;
+    }
+    .bottom {
+        top: 180px;
+        right: 340px;
+    }
+    .phone{
+        font-size: 10px;
+        padding: 5px;
+    }
+    .numbers .happy{
+        padding-top: 100px !important;
+    }
+    
+    .icons{
+        top: 182px;
+        right: 190px;
+    }
+    .icons h5{
+        font-size: xx-small !important;
+    }
+    .icons span{
+        font-size: small !important;
+    }
+}
 @media (min-width: 576px) and (max-width: 767.98px){
     .top-right {
         top: 80px;
@@ -292,93 +428,6 @@
     }
     .icons h5, .icons p{
         font-size: smaller !important;
-    }
-}
-
-@media (min-width: 300px) and (max-width: 600px){
-    .logo{
-        width: 120px;
-    }
-    .bg-image{
-        height: 250px;
-    }
-    .top-right {
-        top: 70px;
-        right: 170px;
-        font-size: 8pt !important;
-    }
-    
-    .right {
-        top: 95px;
-        right: 230px;
-        font-size: 12pt;
-    }
-    
-    .bottom-right {
-        top: 150px;
-        right: 152px;
-        font-size: xx-small;
-    }
-    .bottom {
-        top: 180px;
-        right: 350px;
-    }
-    .phone{
-        font-size: 10px;
-        padding: 5px;
-    }
-    
-    .icons{
-        top: 182px;
-        right: 200px;
-    }
-    .icons h5{
-        font-size: xx-small !important;
-    }
-    .icons span{
-        font-size: small !important;
-    }
-}
-
-@media (max-width: 300px){
-    .logo{
-        width: 80px;
-    }
-    .top-right {
-        top: 70px;
-        right: 150px;
-        font-size: 8pt !important;
-    }
-    
-    .right {
-        top: 95px;
-        right: 200px;
-        font-size: 12pt;
-    }
-    
-    .bottom-right {
-        top: 150px;
-        right: 130px;
-        font-size: xx-small;
-    }
-    .bottom {
-        top: 180px;
-        right: 300px;
-    }
-    .phone{
-        font-size: 10px;
-        padding: 5px;
-    }
-    
-    .icons{
-        top: 182px;
-        right: 150px;
-    }
-    .icons h5{
-        font-size: xx-small !important;
-    }
-    .icons span{
-        font-size: small !important;
     }
 }
 
